--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
              </h1>
              <br>
              <h1> TSEYI</h1>
-             <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif";>Daddy happy birthday, we want you to know much we love you. I can only remember the times when you 
-                 would come home on saturdays and I would hide behind the door so I could jump on you happy that you were finally home, Thank you Daddy
+             <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif";>Daddy happy birthday, we want you to know how much we love you. I can only remember the times when you 
+                 would come home on saturdays and I would hide behind the door so I could jump on you, happy that you were finally home, Thank you Daddy
                  and I love you daddy have a wonderful day.
              </h1>
              <br>
